--- a/app/views/transactionInfos.html
+++ b/app/views/transactionInfos.html
@@ -60,6 +60,10 @@
                 <td>Gas Price</td>
                 <td>{{gasPrice}}</td>
             </tr>
+	    <tr>
+                <td>Mint</td>
+                <td>{{mint}}</td>
+            </tr>	
             <tr>
                 <td>Number of transactions made by the sender prior to this one</td>
                 <td>{{nonce}}</td>
