--- a/app/views/blockInfos.html
+++ b/app/views/blockInfos.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top: 50px;">
 
     <h1>Block
-        <small>View information about an Ethereum Block</small>
+        <small>View information about an EarthDollar Block</small>
     </h1>
 
     <div id="block-97785883" class="blockdiv">
@@ -52,6 +52,10 @@
                 <td>Gas Limit</td>
                 <td>{{gasLimit}}</td>
             </tr>
+	    <tr>
+                <td>Mint</td>
+                <td>{{mint}}</td>
+            </tr>	
             <tr>
                 <td>Data</td>
                 <td>{{extraData}}</td>
