--- a/app/views/blockInfos.html
+++ b/app/views/blockInfos.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top: 50px;">
 
     <h1>Block
-        <small>View information about an EarthDollar Block</small>
+        <small>View information about an EarthDollar Block {{timestamp}}</small>
     </h1>
 
     <div id="block-97785883" class="blockdiv">
@@ -52,7 +52,7 @@
                 <td>Gas Limit</td>
                 <td>{{gasLimit}}</td>
             </tr>
-	    <tr>
+	         <tr>
                 <td>Mint</td>
                 <td>{{mint}}</td>
             </tr>	
