--- a/app/views/addressInfos.html
+++ b/app/views/addressInfos.html
@@ -1,14 +1,14 @@
 <div class="container" style="padding-top: 50px;">
 
     <h1>Address
-        <small>View information about an EarthDollar Address</small>
+        <small><td><a href="./#/addressId/{{address}}">{{address}}</a></td></a></small>
     </h1>
 
     <div id="block-97785883" class="blockdiv">
         <table class="table table-striped" cellpadding="0" cellspacing="0" style="padding:0px;float:left;margin:0px;width:100%">
             <tbody>
             <tr>
-                <th colspan="3" align="left"><a class="hash-link" href="./#/block/{{blockId}}">{{hash}}</a> <span class="pull-right"></span></th>
+                <th colspan="3" align="left"><a class="hash-link" href="./#/address/{{blockId}}">{{hash}}</a> <span class="pull-right"></span></th>
             </tr>
             </tbody>
         </table>
@@ -21,38 +21,38 @@
                 <th colspan="2" style="text-align:left">Summary</th>
             </tr>
             <tr>
-                <td>Block Number</td>
-                <td><a href="./#/block/{{blockNumber}}">{{number}}</a></td>
+                <td>Address</td>
+                <td><a href="./#/address/{{address}}">{{address}}</a></td>
             </tr>
             <tr>
                 <td>Received Time</td>
                 <td>
-                    {{timestamp}}
+                    {{number}}
                 </td>
             </tr>
             <tr>
                 <td>Difficulty</td>
                 <td>
-                    {{difficulty}}
+                    {{balance}}
                 </td>
             </tr>
             <tr>
                 <td>Nonce</td>
-                <td>{{nonce}}</td>
+                <td>{{count}}</td>
             </tr>
             <tr>
                 <td>Size</td>
-                <td>{{size}}</td>
+                <td>{{miner}}</td>
             </tr>
             <tr>
                 <td>Miner</td>
-                <td><a href="./#/address/{{miner}}">{{miner}}</a></td>
+                <td><a href="./#/address/">{{}}</a></td>
             </tr>
             <tr>
                 <td>Gas Limit</td>
                 <td>{{gasLimit}}</td>
             </tr>
-	    <tr>
+	         <tr>
                 <td>Mint</td>
                 <td>{{mint}}</td>
             </tr>	
@@ -72,7 +72,7 @@
 
     <h2 style="margin-top: 30px;">
       Transactions
-      <small>- contained in current block</small>
+      <small>- contained in current address</small>
     </h2>
 
     <div ng-repeat="tx in transactions">
