--- a/app/views/addressInfos.html
+++ b/app/views/addressInfos.html
@@ -1,28 +1,23 @@
 <div class="container" style="padding-top: 50px;">
 
     <h1>Address
-        <small><td><a href="./#/addressId/{{address}}">{{address}}</a></td></a></small>
+        <small><td>{{address}}</td></td></small>
     </h1>
+    <h3>Balance
+        <small><td>{{balance}}</td></td></small>
+    </h3>
+    <h3>Transactions
+        <small><td>{{txCount}}</td></td></small>
+    </h3>
 
-    <div id="block-97785883" class="blockdiv">
-        <table class="table table-striped" cellpadding="0" cellspacing="0" style="padding:0px;float:left;margin:0px;width:100%">
-            <tbody>
-            <tr>
-                <th colspan="3" align="left"><a class="hash-link" href="./#/address/{{blockId}}">{{hash}}</a> <span class="pull-right"></span></th>
-            </tr>
-            </tbody>
-        </table>
-        <div style="padding-bottom:30px;width:100%;text-align:right;clear:both">
-            <button class="btn btn-primary">{{conf}}</button>
-            <button class="btn btn-success cb"><span>{{gasUsed}} Gas Used</span></button>
-        </div>
+    <div id="address-97785883" class="blockdiv">
         <table class="table table-striped">
             <tbody><tr>
                 <th colspan="2" style="text-align:left">Summary</th>
             </tr>
             <tr>
-                <td>Address</td>
-                <td><a href="./#/address/{{address}}">{{address}}</a></td>
+                <td>Transactions</td>
+                <td>{{txCount}}</td>
             </tr>
             <tr>
                 <td>Received Time</td>
