--- a/app/views/addressInfos.html
+++ b/app/views/addressInfos.html
@@ -9,7 +9,7 @@
     <h3>Transactions
         <small><td>{{txCount}}</td></td></small>
     </h3>
-
+<!--
     <div id="address-97785883" class="blockdiv">
         <table class="table table-striped">
             <tbody><tr>
@@ -63,8 +63,8 @@
 
             </tbody>
         </table>
-    </div>
-
+    </div> -->
+<!--
     <h2 style="margin-top: 30px;">
       Transactions
       <small>- contained in current address</small>
@@ -103,6 +103,6 @@
           </tbody>
       </table>
       <hr>
-    </div>
+    </div> -->
 
 </div>
